--- a/aboutus.html
+++ b/aboutus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>餐酒-一個懂你的地方</title>
+	<title>餐酒-關於我們</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/fontello.css">
@@ -10,14 +10,12 @@
 	<link rel="stylesheet" href="css/default.date.css">
 	<link rel="stylesheet" href="css/default.time.css">
 	<link rel="stylesheet" href="css/rtl.css">
-	<link rel="stylesheet" href="css/swiper.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/picker.js"></script>
 	<script src="js/picker.date.js"></script>
 	<script src="js/picker.time.js"></script>
 	<script src="js/zh_TW.js"></script>
-	<script src="js/swiper.min.js"></script>
 	<script src="js/main.js"></script>
 </head>
 <body>
@@ -81,64 +79,62 @@
 		</div>
 	</div>
 
-	
-
 	<div id="content">
-		
-		<div class="slider">
-			<!-- Slider main container -->
-			<div class="swiper-container">
-			    <!-- Additional required wrapper -->
-			    <div class="swiper-wrapper">
-			        <!-- Slides -->
-			        <div class="swiper-slide"><img src="img/index/slider1.jpg" alt="餐酒"></div>
-			        <div class="swiper-slide"><img src="img/index/slider2.jpg" alt="餐酒"></div>
-			        <div class="swiper-slide"><img src="img/index/slider3.jpg" alt="餐酒"></div>
-			    </div>
-			    <!-- If we need pagination -->
-			    <div class="swiper-pagination"></div>
-			</div>
-		</div>
 
-		<div class="intro">
-			<div class="container col-12">
-				<h1>一個懂你的地方</h1>
-				<p>我們提供放鬆的環境、美味的餐點，以及各式的飲品，讓您不管是約會、獨處、談公事甚至是呼朋引伴玩桌游都沒問題。快來感受一下餐酒的魅力吧！</p>
-			</div>
-		</div>
-
-		<div class="newitem">
+		<div class="pagename">
 			<div class="container">
-				<div class="newitem-img col-6">
-					<img src="img/index/新登場.jpg" alt="餐酒新登場">
+				<h1>關於餐酒</h1>
+			</div>
+		</div>
+
+		<div class="delicious">
+			<img src="img/aboutus/1.jpg" alt="餐酒">
+			<div class="container">
+				<h1>舌尖上的各種美味</h1>
+				<p>當您厭倦生活的百般無味，就讓我們給您增添幾分美味。無論西式、中式，甚至泰式，全都在您的選擇當中，只需靜靜坐下，便能開始環遊美食的世界。</p>
+			</div>
+		</div>
+
+		<div class="coffee">
+			<div class="container">
+				<div class="coffee-content col-6">
+					<h1>感受職人的溫度</h1>
+					<p>我們特聘國際手沖咖啡冠軍駐店，以職人的精神打造專屬您的咖啡香。邀您品味來自蘇門答臘、阿拉比卡、肯亞、哥倫比亞…等不同產地的咖啡豆，感受不同產地的獨特魅力。</p>
 				</div>
-				<div class="newitem-content col-6">
-					<h1>本月新品！</h1>
-					<h1>泰式咖哩焗蝦飯</h1>
-					<p>含有豐富蛋白質的Q彈台灣白刺蝦，搭配泰式紅咖哩烹煮，再加上吸取蝦香鮮甜精華的Q彈米飯，絕對讓你一口接一口，上桌必秒殺！</p>
-					<a href="newmenu.html" class="gotomenu">瞭解當季菜單→</a>
+				<div class="coffee-image col-6">
+					<img src="img/aboutus/2.jpg" alt="餐酒">
 				</div>
 			</div>
 		</div>
 
-		<div class="anniversary">
+		<div class="comfortable">
+			<div class="container">
+				<div class="comfortable-content col-6">
+					<h1>許你一個舒心時刻</h1>
+					<p>充滿品味的裝潢，隨處都是一塊美麗的新天地。無論是想一人獨處或約朋友談天，甚至是帶電腦辦公、約客戶談案件，這裏都是您的首選。</p>
+				</div>
+				<div class="comfortable-image col-6">
+					<img src="img/aboutus/3.jpg" alt="餐酒">
+				</div>
+			</div>
+		</div>
+
+		<div class="location">
 			<div class="container col-12">
-				<img src="img/index/周年慶.jpg" alt="餐酒周年慶">
-			</div>
-		</div>
-
-		<div class="write-email">
-			<div class="container col-12">
-				<div class="center-block">
-					<h1>填寫電子郵件，第一手優惠報你知！</h1>
-					<input type="text" placeholder="填寫電子郵件信箱">
-					<a href="#">
-						<p>送出</p>
-					</a>
+				<h1>餐酒位置</h1>
+				<div class="googlemap">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2029.574147273956!2d121.31260130600049!3d24.99025876551936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34681efc965454b9%3A0x6a8efb8881c97037!2zMzMw5qGD5ZyS5biC5qGD5ZyS5Y2A5Lit5q2j6LevNDjlt7c!5e0!3m2!1szh-TW!2stw!4v1574003587055!5m2!1szh-TW!2stw" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+				</div>
+				<div class="location-content">
+					<div class="all-p">
+						<p>地址｜桃園市桃園區中正路48巷xxx號</p>
+						<p>電話｜(03) 945-9453</p>
+						<p>時間｜上午11:30～晚上10:00</p>
+						<p>低消｜每人最低消費NT$180元</p>
+					</div>
 				</div>
 			</div>
 		</div>
-
 	</div>
 
 	<div id="footer">
@@ -163,20 +159,6 @@
 			</div>
 		</div>
 	</div>
-
-	 <script>
-		var swiper = new Swiper('.swiper-container', {
-			loop: true,
-			autoplay: {
-				delay: 2500,
-				disableOnInteraction: false,
-			},
-		    pagination: {
-		    	el: '.swiper-pagination',
-		    	clickable: true,
-		    },
-	    });
-	  </script>
 
 </body>
 </html>
