update input border

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
 			<div class="container col-12">
 				<div class="center-block">
 					<h1>填寫電子郵件，第一手優惠報你知！</h1>
-					<input type="text" placeholder="填寫電子郵件信箱">
-					<a href="#">
-						<p>送出</p>
-					</a>
+					<form action="register.php" method="post">
+						<input type="text" name="email" placeholder="填寫電子郵件信箱">
+						<button type="submit">送出</button>
+					</form>
 				</div>
 			</div>
 		</div>
