--- a/reservation.html
+++ b/reservation.html
@@ -54,27 +54,33 @@
 	<div id="header">
 		<div class="container flexbox-header">
 			<div class="nav-left">
+				<div class="nav-line"></div>
 				<a href="index.html" class="home">
 					<div class="icon"><i class="icon-home"></i></div>
 					<div class="name">首頁</div>
 				</a>
+				<div class="nav-line"></div>
 				<a href="aboutus.html" class="aboutus">
 					<div class="icon"><i class="icon-user"></i></div>
 					<div class="name">關於我們</div>
 				</a>
+				<div class="nav-line"></div>
 			</div>
 			<a href="index.html" class="logo">
 				<img src="img/logo.svg" alt="餐酒">
 			</a>
 			<div class="nav-right">
-				<a href="newmenu.html">
+				<div class="nav-line"></div>
+				<a href="newmenu.html" class="newmenu">
 					<div class="icon"><i class="icon-food"></i></div>
 					<div class="name">當季菜色</div>
 				</a>
-				<a href="reservation.html">
+				<div class="nav-line"></div>
+				<a href="reservation.html" class="reservation">
 					<div class="icon"><i class="icon-comment"></i></div>
 					<div class="name">線上訂位</div>
 				</a>
+				<div class="nav-line"></div>
 			</div>
 			<a href="#menu" class="hamburger-menu">
 				<div class="hamburger-icon">
