--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</div>
 		<div class="mobile-nav">
 			<a href="index.html"><p>首頁</p></a>
-			<a href="aboutus.html"><p>關於我們</p></a>
+			<a href="aboutus.html"><p>關於餐酒</p></a>
 			<a href="newmenu.html"><p>當季菜色</p></a>
 			<a href="reservation.html"><p>線上訂位</p></a>
 		</div>
@@ -64,7 +64,7 @@
 				<div class="nav-line"></div>
 				<a href="aboutus.html" class="aboutus">
 					<div class="icon"><i class="icon-user"></i></div>
-					<div class="name">關於我們</div>
+					<div class="name">關於餐酒</div>
 				</a>
 				<div class="nav-line"></div>
 			</div>
@@ -120,6 +120,12 @@
 			</div>
 		</div>
 
+		<div class="anniversary">
+			<div class="container col-12">
+				<img src="img/index/周年慶.jpg" alt="餐酒周年慶">
+			</div>
+		</div>
+
 		<div class="newitem">
 			<div class="container">
 				<div class="newitem-img col-6">
@@ -134,12 +140,7 @@
 			</div>
 		</div>
 
-		<div class="anniversary">
-			<div class="container col-12">
-				<img src="img/index/周年慶.jpg" alt="餐酒周年慶">
-			</div>
-		</div>
-
+		
 		<div class="write-email">
 			<div class="container col-12">
 				<div class="center-block">
@@ -159,7 +160,7 @@
 			<div class="container">
 				<div class="footer-nav">
 					<a href="index.html">首頁</a>
-					<a href="aboutus.html">關於我們</a>
+					<a href="aboutus.html">關於餐酒</a>
 					<a href="newmenu.html">當季菜色</a>
 					<a href="reservation.html">線上訂位</a>
 				</div>
