--- a/newmenu.html
+++ b/newmenu.html
@@ -41,7 +41,7 @@
 		</div>
 		<div class="mobile-nav">
 			<a href="index.html"><p>首頁</p></a>
-			<a href="aboutus.html"><p>關於我們</p></a>
+			<a href="aboutus.html"><p>關於餐酒</p></a>
 			<a href="newmenu.html"><p>當季菜色</p></a>
 			<a href="reservation.html"><p>線上訂位</p></a>
 		</div>
@@ -62,7 +62,7 @@
 				<div class="nav-line"></div>
 				<a href="aboutus.html" class="aboutus">
 					<div class="icon"><i class="icon-user"></i></div>
-					<div class="name">關於我們</div>
+					<div class="name">關於餐酒</div>
 				</a>
 				<div class="nav-line"></div>
 			</div>
@@ -267,6 +267,18 @@
 							</div>
 						</div>
 					</div>
+					<div class="fooditem col-4">
+						<div class="item-img">
+							<img src="img/newmenu/salad/3.jpg" alt="餐酒">
+						</div>
+						<div class="item-intro">
+							<div class="item-kind">沙拉</div>
+							<div class="item-name">
+								<div class="meal-name">鮮活蔬食沙拉</div>
+								<div class="meal-price">$120</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="dessert">
 					<div class="fooditem col-4">
@@ -365,6 +377,18 @@
 							</div>
 						</div>
 					</div>
+					<div class="fooditem col-4">
+						<div class="item-img">
+							<img src="img/newmenu/dessert/9.jpg" alt="餐酒">
+						</div>
+						<div class="item-intro">
+							<div class="item-kind">甜點</div>
+							<div class="item-name">
+								<div class="meal-name">巧克力磅特蛋糕</div>
+								<div class="meal-price">$80</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="soup">
 					<div class="fooditem col-4">
@@ -388,6 +412,30 @@
 							<div class="item-name">
 								<div class="meal-name">堅果南瓜濃湯</div>
 								<div class="meal-price">$80</div>
+							</div>
+						</div>
+					</div>
+					<div class="fooditem col-4">
+						<div class="item-img">
+							<img src="img/newmenu/soup/3.jpg" alt="餐酒">
+						</div>
+						<div class="item-intro">
+							<div class="item-kind">湯品</div>
+							<div class="item-name">
+								<div class="meal-name">川味精燉牛肉</div>
+								<div class="meal-price">$120</div>
+							</div>
+						</div>
+					</div>
+					<div class="fooditem col-4">
+						<div class="item-img">
+							<img src="img/newmenu/soup/4.jpg" alt="餐酒">
+						</div>
+						<div class="item-intro">
+							<div class="item-kind">湯品</div>
+							<div class="item-name">
+								<div class="meal-name">南洋海鮮叻沙</div>
+								<div class="meal-price">$110</div>
 							</div>
 						</div>
 					</div>
@@ -598,7 +646,7 @@
 			<div class="container">
 				<div class="footer-nav">
 					<a href="index.html">首頁</a>
-					<a href="aboutus.html">關於我們</a>
+					<a href="aboutus.html">關於餐酒</a>
 					<a href="newmenu.html">當季菜色</a>
 					<a href="reservation.html">線上訂位</a>
 				</div>
