--- a/aboutus.html
+++ b/aboutus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>餐酒-關於我們</title>
+	<title>餐酒-關於餐酒</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -41,7 +41,7 @@
 		</div>
 		<div class="mobile-nav">
 			<a href="index.html"><p>首頁</p></a>
-			<a href="aboutus.html"><p>關於我們</p></a>
+			<a href="aboutus.html"><p>關於餐酒</p></a>
 			<a href="newmenu.html"><p>當季菜色</p></a>
 			<a href="reservation.html"><p>線上訂位</p></a>
 		</div>
@@ -62,7 +62,7 @@
 				<div class="nav-line"></div>
 				<a href="aboutus.html" class="aboutus">
 					<div class="icon"><i class="icon-user"></i></div>
-					<div class="name">關於我們</div>
+					<div class="name">關於餐酒</div>
 				</a>
 				<div class="nav-line"></div>
 			</div>
@@ -155,7 +155,7 @@
 			<div class="container">
 				<div class="footer-nav">
 					<a href="index.html">首頁</a>
-					<a href="aboutus.html">關於我們</a>
+					<a href="aboutus.html">關於餐酒</a>
 					<a href="newmenu.html">當季菜色</a>
 					<a href="reservation.html">線上訂位</a>
 				</div>
