--- a/aboutus.html
+++ b/aboutus.html
@@ -113,6 +113,7 @@
 				<div class="coffee-content col-6">
 					<h1>感受職人的溫度</h1>
 					<p>我們特聘國際手沖咖啡冠軍駐店，以職人的精神打造專屬您的咖啡香。邀您品味來自蘇門答臘、阿拉比卡、肯亞、哥倫比亞…等不同產地的咖啡豆，感受不同產地的獨特魅力。</p>
+					<a href="reservation.html">現在預約 →</a>
 				</div>
 				<div class="coffee-image col-6">
 					<img src="img/aboutus/2.jpg" alt="餐酒">
@@ -125,6 +126,7 @@
 				<div class="comfortable-content col-6">
 					<h1>許你一個舒心時刻</h1>
 					<p>充滿品味的裝潢，隨處都是一塊美麗的新天地。無論是想一人獨處或約朋友談天，甚至是帶電腦辦公、約客戶談案件，這裏都是您的首選。</p>
+					<a href="reservation.html">線上訂位 →</a>
 				</div>
 				<div class="comfortable-image col-6">
 					<img src="img/aboutus/3.jpg" alt="餐酒">
