update index newitem

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
 			<div class="container">
 				<div class="newitem-img col-6">
 					<img src="img/index/新登場.jpg" alt="餐酒新登場">
+					<div class="newitem-intro">
+						<p>泰式咖哩焗蝦飯</p>
+						<p>限時特價$250</p>
+					</div>
 				</div>
 				<div class="newitem-content col-6">
 					<h1>本月新品！</h1>
