--- a/reservation.html
+++ b/reservation.html
@@ -92,6 +92,40 @@
 		</div>
 	</div>
 
+	<div class="fixedheader">
+		<div class="container flexbox-header">
+			<div class="nav-left">
+				<div class="nav-line"></div>
+				<a href="index.html" class="home">
+					<div class="icon"><i class="icon-home"></i></div>
+					<div class="name">首頁</div>
+				</a>
+				<div class="nav-line"></div>
+				<a href="aboutus.html" class="aboutus">
+					<div class="icon"><i class="icon-user"></i></div>
+					<div class="name">關於餐酒</div>
+				</a>
+				<div class="nav-line"></div>
+			</div>
+			<a href="index.html" class="logo">
+				<img src="img/logo.svg" alt="餐酒">
+			</a>
+			<div class="nav-right">
+				<div class="nav-line"></div>
+				<a href="newmenu.html" class="newmenu">
+					<div class="icon"><i class="icon-food"></i></div>
+					<div class="name">當季菜色</div>
+				</a>
+				<div class="nav-line"></div>
+				<a href="reservation.html" class="reservation">
+					<div class="icon"><i class="icon-comment"></i></div>
+					<div class="name">線上訂位</div>
+				</a>
+				<div class="nav-line"></div>
+			</div>
+		</div>
+	</div>
+
 	<div id="content">
 
 		<div class="pagename online">
