--- a/aboutus.html
+++ b/aboutus.html
@@ -172,11 +172,11 @@
 			<div class="container col-12">
 				<h1>餐酒位置</h1>
 				<div class="googlemap">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2029.574147273956!2d121.31260130600049!3d24.99025876551936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34681efc965454b9%3A0x6a8efb8881c97037!2zMzMw5qGD5ZyS5biC5qGD5ZyS5Y2A5Lit5q2j6LevNDjlt7c!5e0!3m2!1szh-TW!2stw!4v1574003587055!5m2!1szh-TW!2stw" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3011.776731772688!2d121.31262436910544!3d24.990827151319483!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34681efc95293fff%3A0x358abb9e807aa958!2zMzMw5qGD5ZyS5biC5qGD5ZyS5Y2A5Lit5q2j6LevNDjomZ8!5e0!3m2!1szh-TW!2stw!4v1574603278686!5m2!1szh-TW!2stw" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 				</div>
 				<div class="location-content">
 					<div class="all-p">
-						<p>地址｜桃園市桃園區中正路48巷xxx號</p>
+						<p>地址｜桃園市桃園區中正路48號x樓</p>
 						<p>電話｜(03) 945-9453</p>
 						<p>時間｜上午11:30～晚上10:00</p>
 						<p>低消｜每人最低消費NT$180元</p>
