--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		<div class="intro">
 			<div class="container col-12">
 				<h1>一個懂你的地方</h1>
-				<p>我們提供放鬆的環境、美味的餐點，以及各式的飲品，讓您不管是約會、獨處、談公事甚至是呼朋引伴玩桌游都沒問題。快來感受一下餐酒的魅力吧！</p>
+				<p>我們提供放鬆的環境、美味的餐點，以及各式的飲品，讓您不管是朋友約會、一人獨處、相約辦公，甚至是發呆放空都沒問題。快來感受一下餐酒的魅力吧！</p>
 			</div>
 		</div>
 
@@ -170,7 +170,7 @@
 				<div class="newitem-content col-6">
 					<h1>本月新品！</h1>
 					<h1>泰式咖哩焗蝦飯</h1>
-					<p>含有豐富蛋白質的Q彈台灣白刺蝦，搭配泰式紅咖哩烹煮，再加上吸取蝦香鮮甜精華的Q彈米飯，絕對讓你一口接一口，上桌必秒殺！</p>
+					<p>含有豐富蛋白質的Q彈台灣白刺蝦，搭配泰式紅咖哩烹煮，再配上吸取蝦香鮮甜精華的Q彈米飯，絕對讓你一口接一口，上桌必秒殺！</p>
 					<a href="newmenu.html" class="gotomenu">瞭解當季菜單→</a>
 				</div>
 			</div>
