--- a/newmenu.html
+++ b/newmenu.html
@@ -174,8 +174,8 @@
 						<div class="item-intro">
 							<div class="item-kind">主餐</div>
 							<div class="item-name">
-								<div class="meal-name">嫩煎原塊牛小排</div>
-								<div class="meal-price">$380</div>
+								<div class="meal-name">香煎鮭魚排</div>
+								<div class="meal-price">$300</div>
 							</div>
 						</div>
 					</div>
@@ -222,7 +222,7 @@
 						<div class="item-intro">
 							<div class="item-kind">主餐</div>
 							<div class="item-name">
-								<div class="meal-name">法式起司牛夾心堡</div>
+								<div class="meal-name">起司牛法式夾心堡</div>
 								<div class="meal-price">$220</div>
 							</div>
 						</div>
@@ -246,7 +246,7 @@
 						<div class="item-intro">
 							<div class="item-kind">主餐</div>
 							<div class="item-name">
-								<div class="meal-name">日式辣味增面</div>
+								<div class="meal-name">日式辣味噌麵</div>
 								<div class="meal-price">$180</div>
 							</div>
 						</div>
@@ -432,7 +432,7 @@
 						<div class="item-intro">
 							<div class="item-kind">湯品</div>
 							<div class="item-name">
-								<div class="meal-name">川味精燉牛肉</div>
+								<div class="meal-name">川味精燉牛肉湯</div>
 								<div class="meal-price">$120</div>
 							</div>
 						</div>
@@ -444,7 +444,7 @@
 						<div class="item-intro">
 							<div class="item-kind">湯品</div>
 							<div class="item-name">
-								<div class="meal-name">南洋海鮮叻沙</div>
+								<div class="meal-name">南洋海鮮叻沙湯</div>
 								<div class="meal-price">$110</div>
 							</div>
 						</div>
@@ -501,18 +501,6 @@
 					</div>
 					<div class="fooditem col-4">
 						<div class="item-img">
-							<img src="img/newmenu/drink/5.jpg" alt="餐酒">
-						</div>
-						<div class="item-intro">
-							<div class="item-kind">飲品</div>
-							<div class="item-name">
-								<div class="meal-name">草莓西米露</div>
-								<div class="meal-price">$150</div>
-							</div>
-						</div>
-					</div>
-					<div class="fooditem col-4">
-						<div class="item-img">
 							<img src="img/newmenu/drink/6.jpg" alt="餐酒">
 						</div>
 						<div class="item-intro">
@@ -556,6 +544,18 @@
 							<div class="item-name">
 								<div class="meal-name">特調蔬果汁</div>
 								<div class="meal-price">$220</div>
+							</div>
+						</div>
+					</div>
+					<div class="fooditem col-4">
+						<div class="item-img">
+							<img src="img/newmenu/drink/5.jpg" alt="餐酒">
+						</div>
+						<div class="item-intro">
+							<div class="item-kind">飲品</div>
+							<div class="item-name">
+								<div class="meal-name">草莓西米露</div>
+								<div class="meal-price">$150</div>
 							</div>
 						</div>
 					</div>
