--- a/aboutus.html
+++ b/aboutus.html
@@ -138,7 +138,7 @@
 			<img src="img/aboutus/1.jpg" alt="餐酒">
 			<div class="container">
 				<h1>舌尖上的各種美味</h1>
-				<p>當您厭倦生活的百般無味，就讓我們給您增添幾分美味。無論西式、中式，甚至泰式，全都在您的選擇當中，只需靜靜坐下，便能開始環遊美食的世界。</p>
+				<p>當您厭倦生活的百般無味，讓我們為您加上幾分美味。無論西式、中式，甚至泰式，全都在您的選擇當中，只需靜靜坐下，便能開始環遊美食的世界。</p>
 			</div>
 		</div>
 
@@ -159,7 +159,7 @@
 			<div class="container">
 				<div class="comfortable-content col-6">
 					<h1>許你一個舒心時刻</h1>
-					<p>充滿品味的裝潢，隨處都是一塊美麗的新天地。無論是想一人獨處或約朋友談天，甚至是帶電腦辦公、約客戶談案件，這裏都是您的首選。</p>
+					<p>充滿品味的裝潢，隨處都是一塊美麗的新天地。無論是想一人獨處或約朋友談天，甚至帶電腦辦公、約客戶談案件，這裡都是您的首選。</p>
 					<a href="reservation.html">線上訂位 →</a>
 				</div>
 				<div class="comfortable-image col-6">
