update new design

--- a/aboutus.html
+++ b/aboutus.html
@@ -144,10 +144,12 @@
 		<div class="coffee">
 			<div class="container">
 				<div class="coffee-content col-6">
-					<h1>感受職人的溫度</h1>
-					<p>我們特聘國際手沖咖啡冠軍駐店，以職人的精神打造專屬您的咖啡香。邀您品味來自蘇門答臘、阿拉比卡、肯亞、哥倫比亞…等不同產地的咖啡豆，感受不同產地的獨特魅力。</p>
-					<div class="reservation-button">
-						<a href="reservation.html">現在預約 →</a>
+					<div class="border">
+						<h1>感受職人的溫度</h1>
+						<p>我們特聘國際手沖咖啡冠軍駐店，以職人的精神打造專屬您的咖啡香。邀您品味來自蘇門答臘、阿拉比卡、肯亞、哥倫比亞…等不同產地的咖啡豆，感受不同產地的獨特魅力。</p>
+						<div class="reservation-button">
+							<a href="reservation.html">現在預約 →</a>
+						</div>
 					</div>
 				</div>
 				<div class="coffee-image col-6">
@@ -159,10 +161,12 @@
 		<div class="comfortable">
 			<div class="container">
 				<div class="comfortable-content col-6">
-					<h1>許你一個舒心時刻</h1>
-					<p>充滿品味的裝潢，隨處都是一塊美麗的新天地。無論是想一人獨處或約朋友談天，甚至帶電腦辦公、約客戶談案件，這裡都是您的首選。</p>
-					<div class="reservation-button">
-						<a href="reservation.html">線上訂位 →</a>
+					<div class="border">
+						<h1>許你一個舒心時刻</h1>
+						<p>充滿品味的裝潢，隨處都是一塊美麗的新天地。無論是想一人獨處或約朋友談天，甚至帶電腦辦公、約客戶談案件，這裡都是您的首選。</p>
+						<div class="reservation-button">
+							<a href="reservation.html">線上訂位 →</a>
+						</div>
 					</div>
 				</div>
 				<div class="comfortable-image col-6">
@@ -173,16 +177,18 @@
 
 		<div class="location">
 			<div class="container col-12">
-				<h1>餐酒位置</h1>
-				<div class="googlemap">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3011.776731772688!2d121.31262436910544!3d24.990827151319483!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34681efc95293fff%3A0x358abb9e807aa958!2zMzMw5qGD5ZyS5biC5qGD5ZyS5Y2A5Lit5q2j6LevNDjomZ8!5e0!3m2!1szh-TW!2stw!4v1574603278686!5m2!1szh-TW!2stw" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-				</div>
-				<div class="location-content">
-					<div class="all-p">
-						<p>地址｜桃園市桃園區中正路48號x樓</p>
-						<p>電話｜(03) 945-9453</p>
-						<p>時間｜上午11:30～晚上10:00</p>
-						<p>低消｜每人最低消費NT$180元</p>
+				<div class="border">
+					<h1>餐酒位置</h1>
+					<div class="googlemap">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3011.776731772688!2d121.31262436910544!3d24.990827151319483!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34681efc95293fff%3A0x358abb9e807aa958!2zMzMw5qGD5ZyS5biC5qGD5ZyS5Y2A5Lit5q2j6LevNDjomZ8!5e0!3m2!1szh-TW!2stw!4v1574603278686!5m2!1szh-TW!2stw" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+					</div>
+					<div class="location-content">
+						<div class="all-p">
+							<p>地址｜桃園市桃園區中正路48號x樓</p>
+							<p>電話｜(03) 945-9453</p>
+							<p>時間｜上午11:30～晚上10:00</p>
+							<p>低消｜每人最低消費NT$180元</p>
+						</div>
 					</div>
 				</div>
 			</div>
