--- a/index.html
+++ b/index.html
@@ -167,10 +167,14 @@
 					</div>
 				</div>
 				<div class="newitem-content col-6">
-					<h1>本月新品！</h1>
-					<h1>泰式咖哩焗蝦飯</h1>
-					<p>含有豐富蛋白質的Q彈台灣白刺蝦，搭配泰式紅咖哩烹煮，再配上吸取蝦香鮮甜精華的Q彈米飯，絕對讓你一口接一口，上桌必秒殺！</p>
-					<a href="newmenu.html" class="gotomenu">瞭解當季菜單→</a>
+					<div class="border">
+						<h1>本月新品！</h1>
+						<h1 class="line2">泰式咖哩焗蝦飯</h1>
+						<p>含有豐富蛋白質的Q彈台灣白刺蝦，搭配泰式紅咖哩烹煮，再配上吸取蝦香鮮甜精華的Q彈米飯，絕對讓你一口接一口，上桌必秒殺！</p>
+						<div class="newmenu-button">
+							<a href="newmenu.html" class="gotomenu">瞭解當季菜單 →</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
