update new design

--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
 				<a href="index.html" class="mobile-logo">
 					<img src="img/logo.svg" alt="餐酒">
 				</a>
-				<a href="" class="mobile-cancel">
+				<a href="#" class="mobile-cancel">
 					<div></div>
 					<div></div>
 				</a>
@@ -129,7 +129,10 @@
 
 		<div class="pagename">
 			<div class="container">
-				<h1>關於餐酒</h1>
+				<div class="square">
+					<h1>關 於</h1>
+					<h1>餐 酒</h1>
+				</div>
 			</div>
 		</div>
 
@@ -146,7 +149,7 @@
 				<div class="coffee-content col-6">
 					<div class="border">
 						<h1>感受職人的溫度</h1>
-						<p>我們特聘國際手沖咖啡冠軍駐店，以職人的精神打造專屬您的咖啡香。邀您品味來自蘇門答臘、阿拉比卡、肯亞、哥倫比亞…等不同產地的咖啡豆，感受不同產地的獨特魅力。</p>
+						<p>餐酒擁有國際手沖咖啡冠軍的咖啡師，以職人的精神打造專屬您的咖啡香。邀您品味來自蘇門答臘、阿拉比卡、肯亞、哥倫比亞…等不同產地的咖啡豆，感受不同產地的獨特魅力。</p>
 						<div class="reservation-button">
 							<a href="reservation.html">現在預約 →</a>
 						</div>
@@ -198,22 +201,34 @@
 	<div id="footer">
 		<div class="information">
 			<div class="container">
-				<div class="footer-nav">
-					<a href="index.html">首頁</a>
-					<a href="aboutus.html">關於餐酒</a>
-					<a href="newmenu.html">當季菜色</a>
-					<a href="reservation.html">線上訂位</a>
+				<div class="other-pages">
+					<div class="title">Other Pages</div>
+					<div class="items">
+						<a href="index.html" class="index">首 頁</a>
+						<a href="aboutus.html">關於餐酒</a>
+					</div>
+					<div class="items">
+						<a href="newmenu.html">當季菜色</a>
+						<a href="reservation.html">線上訂位</a>
+					</div>
 				</div>
-				<div class="social-media">
-					<a href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour"><i class="icon-facebook-squared"></i></a>
-					<a href="https://www.instagram.com/eatwine2019/"><i class="icon-instagram"></i></a>
+				<div class="contact-us">
+					<div class="title">Contact Us</div>
+					<div class="tel">(03) 945-9453</div>
+					<div class="location">桃園市桃園區中華路48號x樓</div>
 				</div>
-				<div class="copyright">©Copright 2019 Shao-Chuan Lu</div>
+				<div class="follow-us">
+					<div class="title">Follow Us</div>
+					<div class="items">
+						<a href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour" class="fb"><i class="icon-facebook-squared"></i></a>
+						<a href="https://www.instagram.com/eatwine2019/"><i class="icon-instagram"></i></a>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="statement">
 			<div class="container">
-				<div class="statement-content">資料、圖片來源皆來自網路，僅用來做為學習用途</div>
+				<div class="copyright">© Copright 2019 Shao-Chuan Lu</div>
 			</div>
 		</div>
 	</div>
