--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<a href="index.html" class="mobile-logo">
 					<img src="img/logo.svg" alt="餐酒">
 				</a>
-				<a href="" class="mobile-cancel">
+				<a href="#" class="mobile-cancel">
 					<div></div>
 					<div></div>
 				</a>
@@ -151,12 +151,6 @@
 			</div>
 		</div>
 
-		<div class="anniversary">
-			<div class="container col-12">
-				<img src="img/index/周年慶.jpg" alt="餐酒周年慶">
-			</div>
-		</div>
-
 		<div class="newitem">
 			<div class="container">
 				<div class="newitem-img col-6">
@@ -174,6 +168,28 @@
 						<div class="newmenu-button">
 							<a href="newmenu.html" class="gotomenu">瞭解當季菜單 →</a>
 						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="choose-us">
+			<div class="container">
+				<div class="choose-items">
+					<div class="top10 col-4">
+						<div class="icon"><i class="icon-award"></i></div>
+						<div class="title">桃園十大美食餐廳</div>
+						<div class="reason">餐酒榮獲桃園年度十大美食餐廳，不管是西式、中式、南洋料理，都能一次品味。再搭配特調飲品，連專業老饕都推薦。</div>
+					</div>
+					<div class="ambience col-4">
+						<div class="icon"><i class="icon-thumbs-up-alt"></i></div>
+						<div class="title">最有情調餐廳</div>
+						<div class="reason">我們榮獲網友票選為桃園最有情調餐廳。不管是約會、辦公、獨處，餐酒都是您的最佳首選，讓您怎麼拍怎麼美，還能刷一波臉書、Instagram朋友圈。</div>
+					</div>
+					<div class="coffee col-4">
+						<div class="icon"><i class="icon-coffee"></i></div>
+						<div class="title">冠軍手沖咖啡師</div>
+						<div class="reason">餐酒特聘咖啡師榮獲國際手沖咖啡大賽冠軍。世界冠軍咖啡香就在餐酒，讓您不必遠赴他方，即可一嘗國際冠軍的風采。</div>
 					</div>
 				</div>
 			</div>
@@ -197,22 +213,34 @@
 	<div id="footer">
 		<div class="information">
 			<div class="container">
-				<div class="footer-nav">
-					<a href="index.html">首頁</a>
-					<a href="aboutus.html">關於餐酒</a>
-					<a href="newmenu.html">當季菜色</a>
-					<a href="reservation.html">線上訂位</a>
+				<div class="other-pages">
+					<div class="title">Other Pages</div>
+					<div class="items">
+						<a href="index.html" class="index">首 頁</a>
+						<a href="aboutus.html">關於餐酒</a>
+					</div>
+					<div class="items">
+						<a href="newmenu.html">當季菜色</a>
+						<a href="reservation.html">線上訂位</a>
+					</div>
 				</div>
-				<div class="social-media">
-					<a href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour"><i class="icon-facebook-squared"></i></a>
-					<a href="https://www.instagram.com/eatwine2019/"><i class="icon-instagram"></i></a>
+				<div class="contact-us">
+					<div class="title">Contact Us</div>
+					<div class="tel">(03) 945-9453</div>
+					<div class="location">桃園市桃園區中華路48號x樓</div>
 				</div>
-				<div class="copyright">©Copright 2019 Shao-Chuan Lu</div>
+				<div class="follow-us">
+					<div class="title">Follow Us</div>
+					<div class="items">
+						<a href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour" class="fb"><i class="icon-facebook-squared"></i></a>
+						<a href="https://www.instagram.com/eatwine2019/"><i class="icon-instagram"></i></a>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="statement">
 			<div class="container">
-				<div class="statement-content">資料、圖片來源皆來自網路，僅用來做為學習用途</div>
+				<div class="copyright">© Copright 2019 Shao-Chuan Lu</div>
 			</div>
 		</div>
 	</div>
