--- a/newmenu.html
+++ b/newmenu.html
@@ -32,7 +32,7 @@
 				<a href="index.html" class="mobile-logo">
 					<img src="img/logo.svg" alt="餐酒">
 				</a>
-				<a href="" class="mobile-cancel">
+				<a href="#" class="mobile-cancel">
 					<div></div>
 					<div></div>
 				</a>
@@ -129,25 +129,21 @@
 
 		<div class="pagename">
 			<div class="container">
-				<h1>當季菜色</h1>
+				<div class="square">
+					<h1>當 季</h1>
+					<h1>菜 色</h1>
+				</div>
 			</div>
 		</div>
 
 		<div class="item-bar">
 			<div class="container">
-				<div class="line"></div>
 				<a href="#" class="a-main-meal active">主餐</a>
-				<div class="line"></div>
 				<a href="#" class="a-salad">沙拉</a>
-				<div class="line"></div>
 				<a href="#" class="a-dessert">甜點</a>
-				<div class="line"></div>
 				<a href="#" class="a-soup">湯品</a>
-				<div class="line"></div>
 				<a href="#" class="a-drink">飲品</a>
-				<div class="line"></div>
 				<a href="#" class="a-snack">小點</a>
-				<div class="line"></div>
 			</div>
 		</div>
 		
@@ -617,22 +613,34 @@
 	<div id="footer">
 		<div class="information">
 			<div class="container">
-				<div class="footer-nav">
-					<a href="index.html">首頁</a>
-					<a href="aboutus.html">關於餐酒</a>
-					<a href="newmenu.html">當季菜色</a>
-					<a href="reservation.html">線上訂位</a>
+				<div class="other-pages">
+					<div class="title">Other Pages</div>
+					<div class="items">
+						<a href="index.html" class="index">首 頁</a>
+						<a href="aboutus.html">關於餐酒</a>
+					</div>
+					<div class="items">
+						<a href="newmenu.html">當季菜色</a>
+						<a href="reservation.html">線上訂位</a>
+					</div>
 				</div>
-				<div class="social-media">
-					<a href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour"><i class="icon-facebook-squared"></i></a>
-					<a href="https://www.instagram.com/eatwine2019/"><i class="icon-instagram"></i></a>
+				<div class="contact-us">
+					<div class="title">Contact Us</div>
+					<div class="tel">(03) 945-9453</div>
+					<div class="location">桃園市桃園區中華路48號x樓</div>
 				</div>
-				<div class="copyright">©Copright 2019 Shao-Chuan Lu</div>
+				<div class="follow-us">
+					<div class="title">Follow Us</div>
+					<div class="items">
+						<a href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour" class="fb"><i class="icon-facebook-squared"></i></a>
+						<a href="https://www.instagram.com/eatwine2019/"><i class="icon-instagram"></i></a>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="statement">
 			<div class="container">
-				<div class="statement-content">資料、圖片來源皆來自網路，僅用來做為學習用途</div>
+				<div class="copyright">© Copright 2019 Shao-Chuan Lu</div>
 			</div>
 		</div>
 	</div>
