--- a/fontello-adb9d677/demo.html
+++ b/fontello-adb9d677/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?95759596');
-      src: url('./font/fontello.eot?95759596#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?95759596') format('woff'),
-           url('./font/fontello.ttf?95759596') format('truetype'),
-           url('./font/fontello.svg?95759596#fontello') format('svg');
+      src: url('./font/fontello.eot?41110927');
+      src: url('./font/fontello.eot?41110927#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?41110927') format('woff'),
+           url('./font/fontello.ttf?41110927') format('truetype'),
+           url('./font/fontello.svg?41110927#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -301,10 +301,15 @@ body {
         <div class="the-icons span3" title="Code: 0xe800"><i class="demo-icon icon-home">&#xe800;</i> <span class="i-name">icon-home</span><span class="i-code">0xe800</span></div>
         <div class="the-icons span3" title="Code: 0xe801"><i class="demo-icon icon-user">&#xe801;</i> <span class="i-name">icon-user</span><span class="i-code">0xe801</span></div>
         <div class="the-icons span3" title="Code: 0xe802"><i class="demo-icon icon-comment">&#xe802;</i> <span class="i-name">icon-comment</span><span class="i-code">0xe802</span></div>
-        <div class="the-icons span3" title="Code: 0xf0f5"><i class="demo-icon icon-food">&#xf0f5;</i> <span class="i-name">icon-food</span><span class="i-code">0xf0f5</span></div>
+        <div class="the-icons span3" title="Code: 0xe803"><i class="demo-icon icon-award">&#xe803;</i> <span class="i-name">icon-award</span><span class="i-code">0xe803</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf0f4"><i class="demo-icon icon-coffee">&#xf0f4;</i> <span class="i-name">icon-coffee</span><span class="i-code">0xf0f4</span></div>
+        <div class="the-icons span3" title="Code: 0xf0f5"><i class="demo-icon icon-food">&#xf0f5;</i> <span class="i-name">icon-food</span><span class="i-code">0xf0f5</span></div>
+        <div class="the-icons span3" title="Code: 0xf164"><i class="demo-icon icon-thumbs-up-alt">&#xf164;</i> <span class="i-name">icon-thumbs-up-alt</span><span class="i-code">0xf164</span></div>
         <div class="the-icons span3" title="Code: 0xf16d"><i class="demo-icon icon-instagram">&#xf16d;</i> <span class="i-name">icon-instagram</span><span class="i-code">0xf16d</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf308"><i class="demo-icon icon-facebook-squared">&#xf308;</i> <span class="i-name">icon-facebook-squared</span><span class="i-code">0xf308</span></div>
       </div>
     </div>
