--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				<div class="contact-us">
 					<div class="title">Contact Us</div>
 					<div class="tel">(03) 945-9453</div>
-					<div class="location">桃園市桃園區中華路48號x樓</div>
+					<div class="location">桃園市桃園區中華路XX號</div>
 				</div>
 				<div class="follow-us">
 					<div class="title">Follow Us</div>
