--- a/aboutus.html
+++ b/aboutus.html
@@ -26,6 +26,9 @@
 </head>
 <body>
 
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v5.0"></script>
+
 	<div class="mobile-menu">
 		<div class="mobile-header">
 			<div class="container">
@@ -183,11 +186,29 @@
 				<div class="border">
 					<h1>餐酒位置</h1>
 					<div class="googlemap">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3011.776731772688!2d121.31262436910544!3d24.990827151319483!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34681efc95293fff%3A0x358abb9e807aa958!2zMzMw5qGD5ZyS5biC5qGD5ZyS5Y2A5Lit5q2j6LevNDjomZ8!5e0!3m2!1szh-TW!2stw!4v1574603278686!5m2!1szh-TW!2stw" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+						<div id="map"></div>
+					    <script>
+					      function initMap() {
+					        var eatwine_LatLng = {lat: 24.9909284, lng: 121.3128835};
+
+					        var map = new google.maps.Map(document.getElementById('map'), {
+					          	zoom: 17,
+					          	center: eatwine_LatLng
+					        });
+
+					        var marker = new google.maps.Marker({
+					         	position: eatwine_LatLng,
+					         	 map: map
+					        });
+					      }
+					    </script>
+					    <script async defer
+					    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWpqJdPY_lBs0WqE_uBmdW47pekl550hA&callback=initMap">
+					    </script>
 					</div>
 					<div class="location-content">
 						<div class="all-p">
-							<p>地址｜桃園市桃園區中正路48號x樓</p>
+							<p>地址｜桃園市桃園區中正路XX號</p>
 							<p>電話｜(03) 945-9453</p>
 							<p>時間｜上午11:30～晚上10:00</p>
 							<p>低消｜每人最低消費NT$180元</p>
@@ -196,6 +217,16 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="social-media">
+			<div class="container">
+				<div class="fb-plugin col-6">
+					<div class="fb-page" data-href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour" data-tabs="timeline" data-width="340" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour">餐酒</a></blockquote></div>
+				</div>
+				<div class="ig-plugin col-6"></div>
+			</div>
+		</div>
+
 	</div>
 
 	<div id="footer">
@@ -215,7 +246,7 @@
 				<div class="contact-us">
 					<div class="title">Contact Us</div>
 					<div class="tel">(03) 945-9453</div>
-					<div class="location">桃園市桃園區中華路48號x樓</div>
+					<div class="location">桃園市桃園區中華路XX號</div>
 				</div>
 				<div class="follow-us">
 					<div class="title">Follow Us</div>
