add index slider button

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
 			    </div>
 			    <!-- If we need pagination -->
 			    <div class="swiper-pagination"></div>
+			    <!-- Add Arrows -->
+			    <div class="swiper-button-next"></div>
+			    <div class="swiper-button-prev"></div>
 			</div>
 		</div>
 
@@ -256,6 +259,10 @@
 		    	el: '.swiper-pagination',
 		    	clickable: true,
 		    },
+		    navigation: {
+		        nextEl: '.swiper-button-next',
+		        prevEl: '.swiper-button-prev',
+		    }
 	    });
 	  </script>
 
