--- a/aboutus.html
+++ b/aboutus.html
@@ -25,33 +25,34 @@
 	<script src="js/main.js"></script>
 </head>
 <body>
+	
+    <script>
+		window.fbAsyncInit = function() {
+		    FB.init({
+			    appId            : 'your-app-id',
+			    autoLogAppEvents : true,
+			    xfbml            : true,
+			    version          : 'v5.0'
+		    });
+	  	};
+	  	(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
 
-	<!-- Load Facebook SDK for JavaScript -->
-      <div id="fb-root"></div>
-      <script>
-        window.fbAsyncInit = function() {
-          FB.init({
-            xfbml            : true,
-            version          : 'v5.0'
-          });
-        };
 
-        (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/zh_TW/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
-
-      <!-- Your customer chat code -->
-      <div class="fb-customerchat"
+    <!-- Your customer chat code -->
+    <div class="fb-customerchat"
         attribution=setup_tool
         page_id="104044647724877"
-  theme_color="#6F4626"
-  logged_in_greeting="有任何問題都可以直接問我歐！"
-  logged_out_greeting="有任何問題都可以直接問我歐！">
-      </div>
+		theme_color="#6F4626"
+  		logged_in_greeting="有任何問題都可以直接問我歐！"
+  		logged_out_greeting="有任何問題都可以直接問我歐！">
+    </div>
 
 
 	<div class="mobile-menu">
@@ -246,7 +247,6 @@
 		<div class="social-media">
 			<div class="container">
 				<div class="fb-plugin col-6">
-					<script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v5.0"></script>
 					<div class="fb-page" data-href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour" data-tabs="timeline" data-width="500" data-height="700" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/%E9%A4%90%E9%85%92-104044647724877/?modal=admin_todo_tour">餐酒</a></blockquote></div>
 				</div>
 				<div class="ig-plugin col-6">
