--- a/reservation.html
+++ b/reservation.html
@@ -25,32 +25,33 @@
 	<script src="js/main.js"></script>
 </head>
 <body>
-	<!-- Load Facebook SDK for JavaScript -->
-      <div id="fb-root"></div>
-      <script>
-        window.fbAsyncInit = function() {
-          FB.init({
-            xfbml            : true,
-            version          : 'v5.0'
-          });
-        };
+	<script>
+		window.fbAsyncInit = function() {
+		    FB.init({
+			    appId            : 'your-app-id',
+			    autoLogAppEvents : true,
+			    xfbml            : true,
+			    version          : 'v5.0'
+		    });
+	  	};
+	  	(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
 
-        (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/zh_TW/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
 
-      <!-- Your customer chat code -->
-      <div class="fb-customerchat"
+    <!-- Your customer chat code -->
+    <div class="fb-customerchat"
         attribution=setup_tool
         page_id="104044647724877"
-  theme_color="#6F4626"
-  logged_in_greeting="有任何問題都可以直接問我歐！"
-  logged_out_greeting="有任何問題都可以直接問我歐！">
-      </div>
+		theme_color="#6F4626"
+  		logged_in_greeting="有任何問題都可以直接問我歐！"
+  		logged_out_greeting="有任何問題都可以直接問我歐！">
+    </div>
 
 	<div class="mobile-menu">
 		<div class="mobile-header">
