--- a/aboutus.html
+++ b/aboutus.html
@@ -75,7 +75,7 @@
 		</div>
 	</div>
 
-	<div id="header">
+	<div class="header">
 		<div class="container flexbox-header">
 			<div class="nav-left">
 				<div class="nav-line"></div>
