--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		</div>
 	</div>
 
-	<div id="header">
+	<div class="header">
 		<div class="container flexbox-header">
 			<div class="nav-left">
 				<div class="nav-line"></div>
