--- a/reservation.html
+++ b/reservation.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="css/default.date.css">
 	<link rel="stylesheet" href="css/default.time.css">
 	<link rel="stylesheet" href="css/main.css">
+	<script language="javascript" type="text/javascript"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/picker.js"></script>
 	<script src="js/picker.date.js"></script>
