--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,6 @@
 	<link rel="stylesheet" href="css/default.date.css">
 	<link rel="stylesheet" href="css/default.time.css">
 	<link rel="stylesheet" href="css/main.css">
-	<script language="javascript" type="text/javascript"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/picker.js"></script>
 	<script src="js/picker.date.js"></script>
@@ -26,6 +25,8 @@
 	<script src="js/main.js"></script>
 </head>
 <body>
+
+	<!-- fb sdk -->
     <script>
 		window.fbAsyncInit = function() {
 		    FB.init({
@@ -43,7 +44,9 @@
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));
 	</script>
-
+	<!-- fb sdk -->
+	
+	<!-- Messenger Customer Chat Plugin -->
     <div class="fb-customerchat"
         attribution=setup_tool
         page_id="104044647724877"
@@ -51,6 +54,7 @@
   		logged_in_greeting="有任何問題都可以直接問我歐！"
   		logged_out_greeting="有任何問題都可以直接問我歐！">
     </div>
+    <!-- Messenger Customer Chat Plugin -->
 
 	<div class="mobile-menu">
 		<div class="mobile-header">
